--- a/templates/user-details-page.html
+++ b/templates/user-details-page.html
@@ -4,33 +4,41 @@
 <!-- prettier-ignore -->
 {%block content %}
 <div class="float-container">
+  <img src="{{user.user_image}}" alt="users image" />
   <div class="float-child">
-    <img src="{{user.user_image}}" class="img-fluid m-3" alt="users image" />
-  </div>
-  <div class="float-child">
-    <h1 class="display-4">{{user.first_name}} {{user.last_name}}</h1>
-  </div>
-  <div class="m-5">
+    <h1 class="display-5">{{user.first_name}} {{user.last_name}}</h1>
     <button
       onclick="location.href='/users/{{user.id}}/edit'"
-      class="btn btn-outline-primary m-2"
+      class="btn btn-outline-primary"
     >
       Edit User
     </button>
     <button
-      onclick="location.href='/users/{{user.id}}/delete'"
-      class="btn btn-outline-danger m-2"
+      onclick="location.href='/users/{{user.id}}/delete/'"
+      class="btn btn-outline-danger"
     >
       Delete User
     </button>
-    <button
-      onclick="location.href='/users'"
-      class="btn btn-outline-success m-2"
-    >
+
+    <button onclick="location.href='/users'" class="btn btn-outline-success">
       Return to All users
     </button>
+    <button
+      onclick="location.href='/users/{{user.id}}/posts/new'"
+      class="btn btn-outline-primary"
+    >
+      Add a post
+    </button>
+    <h1 class="mt-4">Posts</h1>
+
+    <ul>
+      {% for post in user.posts %}
+      <li>
+        <a href="/posts/{{ post.id}}">{{ post.title }}</a>
+      </li>
+      {% endfor %}
+    </ul>
   </div>
 </div>
-
 <!-- prettier-ignore -->
 {% endblock %}
